--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node main"
   },
   "dependencies": {
     "axios": "^0.26.1",
