--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.6.5",
     "express": "^4.18.2",
     "js-cookie": "^3.0.1",
